# evelyn

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  build.sh  docker-compose.yml  evelyn.yml
backend/: Cargo.toml  Dockerfile  evelyn.yml  rustfmt.toml
backend/configs/: docker-evelyn.json  evelyn.json  integration-test.json
backend/configs/certs/: .rnd  ca.crt  ca.key  howto.txt  ia.crt  ia.csr  ia.key
backend/scripts/: docker_test.sh  run_coverage.sh  run_tests.sh
backend/src/: lib.rs  main.rs
backend/src/core/: calendar.rs  date_time_service.rs  error_messages.rs  mod.rs  server_admin.rs  simple_task.rs  todo_list.rs  token_service.rs  user.rs  user_group.rs
backend/src/core/agile/: heirarchy.rs  project.rs  sprint.rs  story.rs  task.rs
backend/src/data/: calendar.rs  conf.rs  data_macros.rs  mod.rs  server_admin.rs  simple_task.rs  todo_list.rs  user.rs  user_group.rs
backend/src/data/agile/: heirarchy.rs  mod.rs  project.rs  sprint.rs  story.rs  task.rs
backend/src/model/: calendar.rs  mod.rs  server_admin.rs  simple_task.rs  todo_list.rs  user.rs  user_group.rs
backend/src/model/agile/: heirarchy.rs  mod.rs  project.rs  sprint.rs  story.rs  task.rs
backend/src/model/todo_list/: item.rs  mod.rs
backend/src/model/user_group/: member.rs  mod.rs
backend/src/processing/: calendar.rs  macros.rs  mod.rs  server_admin.rs  simple_task.rs  todo_list.rs  user.rs  user_group.rs
backend/src/processing/agile/: heirarchy.rs  project.rs  sprint.rs  story.rs  task.rs
backend/src/server/: http.rs  mod.rs  routing.rs
backend/tests/: integration_test.rs  test.rs
dev_ui/: Dockerfile  Gruntfile.js  docker-compose.yml  index.html  package.json  public-serve.js  serve.js
dev_ui/public/: index.html
dev_ui/scss/: main.scss
doc/: evelyndesign.md
scripts/: run_coverage.sh  setup_kcov.sh
src/: lib.rs  main.rs
src/core/: error_messages.rs  mod.rs  simple_task.rs  token_service.rs  user.rs
src/data/: mod.rs
src/model/: mod.rs
src/processing/: mod.rs
src/server/: http.rs  mod.rs  router.rs  routing.rs
test/server_integration_tests/: evelyn_test_conf.json  index.html  package.json  run_tests.sh
tests/: integration_test.rs
ui/: Dockerfile  app-serve.js  gulpfile.js  package-lock.json  package.json
ui/desktop/: Gruntfile.js  gulpfile.js  index.html  package.json
ui/src/: index.html
(+86 files in other folders)
