[project]

name = "evelyn"
version = "0.0.1"
authors = [
  "ThetaSinner <greatdjonfire@hotmail.co.uk>",
  "SubXaero <dylcla@me.com>"
  ]

[dependencies]
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"

# MongoDB uses bson and so the versions must match, hence the specific versions.
bson = "0.7.*"
mongodb = "0.2.7"

jsonwebtoken = "1.*"
rustc-serialize = "0.*"

uuid = { version = "0.*", features = ["v4"] }

chrono = { version = "0.*", features = ["serde", "rustc-serialize"] }

[dependencies.config]
version = "0.*"
default-features = false
features = ["yaml", "yaml-rust"]

[dev-dependencies]
hyper = "0.*"
