[project]

name = "evelyn"
version = "0.0.1"
authors = [
"ThetaSinner <greatdjonfire@hotmail.co.uk>",
"SubXaero <dylcla@me.com>"
]

[dependencies]
log = "0.*"
log4rs = "0.*"

serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"

# MongoDB uses bson and so the versions must match, hence the specific versions.
bson = "0.7.*"
mongodb = { git = "https://github.com/ThetaSinner/mongo-rust-driver-prototype.git" }

jsonwebtoken = "2.*"

uuid = { version = "0.*", features = ["v4"] }

chrono = { version = "0.*", features = ["serde", "rustc-serialize"] }

# Open SSL binaries for Windows http://slproweb.com/products/Win32OpenSSL.html
# Latest hyper (0.11 and up) seems to have no https so can't upgrade yet.
hyper = "0.10.12"
hyper-openssl = "0.2.6"
unicase = "1.4" # Until hyper upgrade.
time = "0.1" # Until hyper upgrade

[dependencies.config]
version = "0.*"
default-features = false
features = ["json", "serde_json"]
# features = ["yaml", "yaml-rust"]
